--- a/package.json
+++ b/package.json
@@ -3,9 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "google-map-react": "^1.1.1",
+    "popmotion": "^8.5.3",
     "react": "^16.6.3",
+    "react-css-transition-replace": "^3.0.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-hot-loader": "^4.3.12",
+    "react-mt-svg-lines": "^0.9.0",
+    "react-pose": "^4.0.2",
+    "react-scripts": "2.1.1",
+    "react-transition-group": "^2.5.0",
+    "recompose": "^0.30.0"
   },
   "scripts": {
     "start": "react-scripts start",
